# kanchi

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  KANCHI_MVP_PLAN.md  LICENSE.txt  LOCAL_OPERATOR_VERIFICATION_CHECKLIST.md  MULTI_BROKER_INVESTIGATION.md  Makefile  ORDERING.md  README.md  design-tokens.md  docker-compose.yaml
agent/: README.md  alembic.ini  app.py  config.py  connection_manager.py  constants.py  database.py  database_models.py  event_handler.py  main.py  metrics.py  models.py  monitor.py  pyproject.toml  run_tests.sh  seed_database.py  test_client.py  ui_routes.py  websocket_server.py  worker_health_monitor.py
agent/alembic/: env.py
agent/alembic/versions/: 0b16d5b0d4a3_add_app_settings_table.py  0f5b6b5dc1ad_add_task_resolutions.py  12c3d5e7a9b0_add_task_progress_tables.py  1c2f3e4d5a67_add_task_latest_index.py  1eaba5f8ab12_drop_task_stats_table.py  2aad51a773a9_add_timezone_support_to_datetime_columns.py  43d4f43f63e5_.py  54d8e9d7ab8c_.py  5f7f1c6c0d21_add_response_context_to_task_registry.py  6495666d07e4_add_task_registry_table.py  6de4dae5ae09_merge_heads.py  7c1e9d2b4a11_add_failure_groups.py  8ff8ccaebcba_add_task_daily_stats_table.py  930bf786783a_.py  97a4e6d2c1ab_add_audit_log_table.py  9b011bf1de45_add_user_sessions_table_for_anonymous_.py  9bf8c2bb4027_.py  a1b2c3d4e5f6_add_workflow_tables.py  aa2f5bfc1d02_add_task_latest_snapshot_table.py  b4f2c8d9e103_add_task_annotations.py  b7f8c9d0e1a2_add_task_action_history.py  c0a2f2d2fe85_add_workflow_circuit_breaker_support.py  c8a4e7d9b123_add_rerun_review_audit_fields.py  d927bf6ca0c2_.py  d9f3a1e5c2b8_add_environments_table.py  e41432b7c746_initial_schema_with_all_models_and_.py  f1e4ab37f2da_add_authentication_tables.py  ff4d89c580cc_.py
agent/api/: action_config_routes.py  audit_routes.py  auth_routes.py  config_routes.py  environment_routes.py  log_routes.py  metrics_routes.py  registry_routes.py  session_routes.py  task_action_routes.py  task_routes.py  websocket_routes.py  worker_routes.py  workflow_routes.py
agent/security/: __init__.py  auth.py  dependencies.py  tokens.py
agent/services/: __init__.py  action_config_service.py  action_executor.py  app_config_service.py  audit_service.py  auth_service.py  daily_stats_service.py  environment_service.py  orphan_detection_service.py  progress_service.py  retention_scheduler.py  retention_scheduler_service.py  retention_service.py  session_service.py  suppression_service.py  task_action_service.py  task_registry_service.py  task_service.py  utils.py  worker_service.py  workflow_catalog.py  workflow_engine.py  workflow_executor.py  workflow_service.py  workflow_simulation_service.py  workflow_templates.py
agent/services/actions/: __init__.py  base.py  notification_policy.py  retry_action.py  slack_action.py
agent/tests/: __init__.py  base.py
agent/tests/unit/: __init__.py  test_app_config_service.py  test_audit_log_service.py  test_bulk_task_action_route.py  test_bulk_task_actions.py  test_daily_stats_service.py  test_environment_service.py  test_infinite_loop_prevention.py  test_json_serialization.py  test_notification_policy.py  test_orphan_detection.py  test_payload_sanitizer.py  test_retention_scheduler.py  test_retention_scheduler_service.py  test_retention_service.py  test_retry_chain.py  test_retry_safety.py  (+22 more)
agent/utils/: __init__.py  payload_sanitizer.py
scripts/test-celery-app/: .gitignore  Dockerfile  Makefile  README.md  celery_app.py  docker-compose.yml  pyproject.toml  run_worker.py  seed_database.py  tasks.py  test_producer.py  test_receiver.py
(+223 files in other folders)
