[tool.poetry]
name = "celery-websocket-monitor"
version = "0.1.0"
description = "A Python application that monitors Celery task events and broadcasts them over WebSocket"
authors = ["czyber <czypka.github@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
celery = "^5.3.0"
kombu = "^5.3.0"
amqp = "^5.1.0"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
sqlalchemy = "^2.0.43"
alembic = "^1.13.0"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.29.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
mypy = "^1.5.1"
ruff = "^0.0.287"

[tool.poetry.scripts]
celery-monitor = "main:main"
celery-monitor-server = "app:start_server"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.ruff]
line-length = 100
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
