[tool.poetry]
name = "celery-websocket-monitor"
version = "0.1.0"
description = "A Python application that monitors Celery task events and broadcasts them over WebSocket"
authors = ["czyber <czypka.github@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
celery = "5.6.2"
kombu = "5.6.2"
amqp = "^5.1.0"
redis = "7.1.1"
fastapi = "0.128.6"
uvicorn = {extras = ["standard"], version = "0.39.0"}
watchfiles = "1.1.1"
pydantic = "2.12.5"
sqlalchemy = "2.0.46"
greenlet = "3.3.1" # Necessary for python 3.14 + sqlalchemy
alembic = "1.18.3"
psycopg = {extras = ["binary"], version = "3.3.2"}
pymysql = "^1.1.1"
asyncpg = {version = "0.31.0", optional = true}
mysqlclient = {version = "^2.2.0", optional = true}
aiohttp = "3.13.3"
prometheus-client = "0.24.1"
kanchi-sdk = "^0.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "9.0.2"
black = "26.1.0"
mypy = "1.19.1"
ruff = "0.15.0"

[tool.poetry.extras]
db-postgres = ["psycopg"]
db-postgres-async = ["asyncpg"]
db-mysql = ["pymysql"]
db-mysql-native = ["mysqlclient"]

[tool.poetry.scripts]
celery-monitor = "main:main"
celery-monitor-server = "app:start_server"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.ruff]
line-length = 100
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
