[tool.poetry]
name = "test-celery-app"
version = "0.1.0"
description = "Test Celery application for Kanchi monitoring"
authors = ["czyber <czypka.github@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
celery = "^5.5.3"
redis = "^6.4.0"
kombu = "^5.5.4"
flower = "^2.0.1"
kanchi-sdk = "^0.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-celery = "^1.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
